deloyment/user-context-service-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    jkube.eclipse.org/git-commit: b3fb3e81d3cd73baef18c2a7406d2c1a3dfdd936
    jkube.eclipse.org/git-url: https://github.com/alphaomegaintegration/user-context-service.git
    jkube.eclipse.org/scm-url: https://github.com/spring-projects/spring-boot/user-context-service
    jkube.eclipse.org/git-branch: main
    jkube.eclipse.org/scm-tag: HEAD
  labels:
    app: user-context-service
    provider: jkube
    version: 0.0.1-SNAPSHOT
    group: com.alpha.omega.user
  name: user-context-service
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: user-context-service
      provider: jkube
      group: com.alpha.omega.user
  template:
    metadata:
      annotations:
        jkube.eclipse.org/git-commit: b3fb3e81d3cd73baef18c2a7406d2c1a3dfdd936
        jkube.eclipse.org/git-url: https://github.com/alphaomegaintegration/user-context-service.git
        jkube.eclipse.org/scm-url: https://github.com/spring-projects/spring-boot/user-context-service
        jkube.eclipse.org/git-branch: main
        jkube.eclipse.org/scm-tag: HEAD
      labels:
        app: user-context-service
        provider: jkube
        version: 0.0.1-SNAPSHOT
        group: com.alpha.omega.user
      name: user-context-service
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: HOSTNAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        image: 127418365645.dkr.ecr.us-east-1.amazonaws.com/user-context-service:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8090
            scheme: HTTP
          initialDelaySeconds: 180
          successThreshold: 1
        name: user-context-service
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8090
            scheme: HTTP
          initialDelaySeconds: 10
          successThreshold: 1
        securityContext:
          privileged: false
